# fetch

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  SECURITY.md  SKILL.md  config.example.yml  fetch  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: phase2-einvoice-research.md
src/: __init__.py  __main__.py  mcp_server.py  onboarding.py
src/invoices/: __init__.py  audit.py  classify.py  config.py  dropbox.py  gmail.py  helpers.py  imap.py  models.py  payment_xml.py  process.py  providers.py  reconcile.py  retrieval.py  summary.py
tests/: conftest.py  test_audit.py  test_config.py  test_dropbox.py  test_gmail.py  test_imap.py  test_providers.py  test_reconcile.py  test_retrieval.py  test_security.py
tests/fixtures/: config.yml
