[project]
name = "fetch"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "rich",
    "click",
    "httpx",
    "pyyaml",
    "mcp>=1.27.2",
    "anyio>=4.12.1",
]

[project.scripts]
fetch = "src:fetch"
fetch-mcp = "src.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "T10",  # flake8-debugger
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PGH",  # pygrep-hooks
    "PL",   # pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "PERF", # perflint
    "RUF",  # ruff-specific rules
]

ignore = [
    "ISC001",  # implicit string concatenation - conflicts with formatter
    "E501",    # line too long
    "S101",    # use of assert
    "S105",    # possible hardcoded password
    "S106",    # possible hardcoded password
    "S107",    # possible hardcoded password
    "S108",    # probable insecure usage of temp file
    "S311",    # random for cryptographic purposes
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison
    "TRY003",  # avoid specifying long messages outside exception class
    "TRY301",  # raise-within-try
    "PLR0912", # too-many-branches
    "ERA001",  # commented-out code
    "SIM115",  # open-file-with-context-handler
]

exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "node_modules",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.per-file-ignores]
# Tests deliberately assert, touch private helpers, and use loose fakes.
"tests/**" = ["S101", "SLF001", "ARG", "C408", "PLR2004", "PT018", "PT011"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
